3636
I can confirm this still happens with 2.8.0.RC2. It only happens when there is a preamble (without is fine) and it seems to consistently display the line above the actual error.

Here's a simple test case:
{code}
#!/bin/sh 
  exec scala $$0 $$@ 
!#

println("statement 1")
println("statement 2".thisisborked)
println("statement 3")
{code}
And the output is:
{code}
(fragment of test.scala):2: error: value thisisborked is not a member of java.lang.String
println("statement 1")
            ^
one error found
{code}
